force-app/main/default/objects/Interaction_Context_Tag__c/Interaction_Context_Tag__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Interaction and Interaction Tag</description>
    <label>Interaction Context Tag</label>
    <nameField>
        <displayFormat>ICT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Context Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>