force-app/main/default/objects/Interaction_Context_Tag__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Parent Object: Interaction</description>
    <label>Interaction</label>
    <referenceTo>Interaction</referenceTo>
    <relationshipLabel>Interaction Context Tags</relationshipLabel>
    <relationshipName>Interaction_Context_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>