force-app/main/default/objects/Interaction_Context_Tag__c/fields/Interaction_Tag__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Tag__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent object: Interaction Tag</description>
    <label>Interaction Tag</label>
    <referenceTo>Interaction_Tag__c</referenceTo>
    <relationshipLabel>Interaction Context Tags</relationshipLabel>
    <relationshipName>Interaction_Context_Tags</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>