force-app/main/default/objects/Interaction_Context_Tag__c/fields/Tag_Name__c.field-meta.xml
<CustomField>
    <fullName>Tag_Name__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Interaction Tag Name from Parent object: Interaction Tag</description>
    <formula>Interaction_Tag__r.Tag__c</formula>
    <label>Tag Name</label>
    <type>Text</type>
</CustomField>