force-app/main/default/objects/Interaction_Context_Tag__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Type from Parent Object: Interaction Tag</description>
    <formula>TEXT(Interaction_Tag__r.Type__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>